clusters/hive/apps/netbox/k8s-manifests/netbox-housekeeping-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: netbox-houskeeping
  name: netbox-housekeeping
  namespace: netbox
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      k8s-app: netbox-housekeeping
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        k8s-app: netbox-housekeeping
    spec:
      containers:
        - args:
            - /opt/netbox/housekeeping.sh
          image: netboxcommunity/netbox:v4.3.3
          imagePullPolicy: Always
          name: netbox-housekeeping
          volumeMounts:
            - mountPath: /opt/netbox/netbox/media
              name: netbox-media-files
      restartPolicy: Always
      volumes:
        - name: netbox-media-files
          persistentVolumeClaim:
            claimName: netbox-media-files
