clusters/hive/apps/netbox/k8s-manifests/redis-cache-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: redis-cache
  name: redis-cache
  namespace: netbox
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      k8s-app: redis-cache
  strategy: {}
  template:
    metadata:
      labels:
        k8s-app: redis-cache
    spec:
      containers:
        - args:
            - sh
            - -c
            - redis-server --requirepass $REDIS_PASSWORD
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              memory: 100Mi
          image: redis:8.0.2-alpine
          name: redis-cache
      restartPolicy: Always
