clusters/hive/apps/netbox/k8s-manifests/netbox-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox
  namespace: netbox
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: netbox.gavriliu.com
      http:
        paths:
          - backend:
              service:
                name: netbox
                port:
                  number: 8080
            path: /
            pathType: Prefix
